cleanedup up some css includes and fixed review linebreaks / spacing

--- a/public/css/bulmaSass.css
+++ b/public/css/bulmaSass.css
@@ -9443,6 +9443,9 @@ form {
 
 .user-review {
   margin: 1rem 2rem;
+}
+
+.reviewText {
   white-space: pre-wrap;
 }
 
